--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,18 @@
 * {
   box-sizing: border-box;
+  font-family: var(--LATO);
 }
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 :root {
-  --inputColor1: #f0f4f7;
+  --Color1: #eee;
+  --Color_h3: #00adee;
+  --Color_text: #4f4f4f;
+  --Link_color: #00adee;
   --LATO: "Lato", sans-serif;
 }
 
@@ -63,3 +68,190 @@ body {
   justify-content: space-between;
   padding-top: 35px;
 }
+
+.secondSection {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 592px;
+}
+
+.left-side {
+  background: url("images/Background2.png");
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.1);
+  position: relative;
+  width: 50%;
+}
+
+.match_info {
+  width: 360px;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding-bottom: 0;
+  position: absolute;
+  top: 109px;
+  left: 163px;
+  z-index: 1;
+}
+
+.datatime_info {
+  flex-basis: 50%;
+  padding: 30px 0 0 15px;
+  margin-bottom: 0;
+}
+
+.time {
+  font-family: var(--LATO);
+  font-size: 17px;
+}
+
+.announcement {
+  font-family: var(--LATO);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  margin-top: 13px;
+  margin-bottom: 17px;
+}
+
+.announcement2 {
+  font-family: var(--LATO);
+  font-size: 16px;
+  line-height: 21px;
+  margin-top: 17px;
+}
+
+.team_logos {
+  flex-basis: 50%;
+  padding-top: 50px;
+  position: relative;
+}
+
+.Arsenal_emblem {
+  position: absolute;
+  top: 49px;
+  left: 22px;
+}
+
+.Chelse_emblem {
+  position: absolute;
+  top: 49px;
+  left: 80px;
+}
+
+.turn_on {
+  height: 50px;
+  width: 100%;
+  align-self: center;
+  background-color: var(--Color1);
+  padding-left: 15px;
+}
+
+.turn_on_text {
+  font-family: var(--LATO);
+  font-size: 19px;
+  line-height: 25px;
+  margin-top: 12px;
+}
+
+.video {
+  height: 218px;
+  width: 360px;
+  object-fit: contain;
+}
+
+.video1 {
+  height: 218px;
+  width: 360px;
+  position: absolute;
+  top: 296px;
+  left: 269px;
+
+}
+
+.rightside {
+  width: 50%;
+}
+
+.rightside {
+  padding: 118px 0 0 123px;
+
+}
+
+.text_h3 {
+  color: var(--Color_h3);
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.text_h2 {
+  font-size: 28px;
+  line-height: 37px;
+  padding-top: 6px;
+  padding-bottom: 0;
+}
+
+.text_secondSection {
+  font-size: 16px;
+  line-height: 23px;
+  color: var(--Color_text);
+  width: 420px;
+  padding-top: 2px;
+  margin-bottom: 21px;
+}
+
+.link_secondSection {
+  text-decoration: none;
+  color: var(--Link_color);
+  font-size: 16px;
+  line-height: 21px;
+
+}
+
+/* click*/
+.center {
+  position: absolute;
+  top: 88%;
+  left: 88%;
+  transform: translate(-50%, -50%);
+}
+
+input[type="checkbox"] {
+  width: 28px;
+  height: 12px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: #c6c6c6;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  position: relative;
+}
+
+input:checked[type="checkbox"] {
+  background: #02a9f4;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  top: -3px;
+  left: 0;
+  background: #fff;
+  transform: scale(1, 1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+input:checked[type="checkbox"]::before {
+  left: 12px;
+}
+
+/*end of button-click*/
