--- a/src/main.css
+++ b/src/main.css
@@ -31,6 +31,7 @@ body {
   background-repeat: no-repeat;
   background-size: auto;
   background-position: right;
+  background-color: #F4F6F9;;
 }
 
 .content {
