--- a/src/main.css
+++ b/src/main.css
@@ -79,7 +79,7 @@ body {
 }
 
 .left-side {
-  background: url("images/Background2.png");
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%), url("images/Background2.png");
   background-repeat: no-repeat;
   background-color: rgba(0, 0, 0, 0.1);
   position: relative;
